# klevernotes

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  REUSE.toml  org.kde.klever.desktop  org.kde.klever.json  org.kde.klever.metainfo.xml  org.kde.klevernotes.desktop  org.kde.klevernotes.metainfo.xml
src/: CMakeLists.txt  Messages.sh  about.cpp  about.h  app.cpp  app.h  kleverconfig.kcfg  kleverconfig.kcfgc  main.cpp  notelistmodel.cpp  notelistmodel.h  resources.qrc
src/autotests/: CMakeLists.txt
src/autotests/parser/: emojiTest.cpp  extendedSyntaxTest.cpp  noteLinkingTest.cpp
src/autotests/testdata/: extendSyntaxData.md
src/contents/logic/: Checker.js  mdHandler.cpp  mdHandler.h  qmlLinker.cpp  qmlLinker.h  test.js  view.cpp  view.h
src/contents/resources/: demo.html  index.html  qwebchannel.js
src/contents/resources/style/: Avenir.css  KleverStyle.css  Style7.css  Style9.css
src/contents/ui/: About.qml  Main.qml  Sidebar.qml  main.qml
src/contents/ui/dialogs/: DeleteConfirmationDialog.qml  FilePickerDialog.qml  FileSaverDialog.qml  FolderChooserDialog.qml  FolderPickerDialog.qml  FontDialog.qml  FontPickerDialog.qml  ImagePickerDialog.qml  ItemPropertiesDialog.qml  LeavePaintingDialog.qml  LinkDialog.qml  LinkNoteDialog.qml  MoveDialog.qml  NamingDialog.qml  NamingErrorDialog.qml  PrintingDialog.qml  RenameErrorDialog.qml  StorageConversionDialog.qml  StorageDialog.qml  TableMakerDialog.qml  TextDialog.qml  ToDoDialog.qml  URLDialog.qml  WarningDialog.qml
src/contents/ui/listview/: ExpandableItem.qml  List.qml
src/contents/ui/pages/: AboutPage.qml  MainPage.qml  PaintingPage.qml  PrintingPage.qml  SettingsPage.qml
src/contents/ui/painting/: ColorBar.qml  ColorButton.qml  DrawingToolBar.qml  DrawingToolBarOptions.qml
src/contents/ui/settings/: AppearanceTab.qml  DisplayPreview.qml  EditorHighlightPreview.qml  EditorTab.qml  ExpendingFormCheckBox.qml  ExpendingFormSwitch.qml  FontPicker.qml  GeneralTab.qml  NotePreviewTab.qml  PluginsTab.qml  SettingsColorButton.qml  TabBar.qml
src/contents/ui/sharedComponents/: ActionsList.qml  ExpandingFormSwitch.qml  KAction.qml  ReversibleButtonDelegate.qml
src/contents/ui/sideBar/: ActionBar.qml  ContextMenu.qml  Expandable.qml  SearchBar.qml  Sidebar.qml  SubEntryColumn.qml  TreeItem.qml  TreeNode.qml  TreeView.qml
src/contents/ui/textEditor/: BottomToolBar.qml  CheatSheet.qml  Editor.qml  EditorView.qml  NotesMap.qml  TextDisplay.qml  TextEditor.qml  TextToolBar.qml  ToolBar.qml  baseDoc.html
src/contents/ui/texteditor/: Editor.qml  example.html
src/contents/ui/todoEditor/: ToDoView.qml  TodoDelegate.qml
src/example/Demo/: note.md
src/logic/: colorschemer.cpp  colorschemer.h  documentHandler.cpp  documentHandler.h  editorHandler.cpp  editorHandler.h  kleverUtility.cpp  kleverUtility.h  mdHandler.cpp  mdHandler.h  noteMapper.cpp  noteMapper.h  qmlLinker.cpp  qmlLinker.h  storageHandler.cpp  storageHandler.h  todoHandler.cpp  todoHandler.h
src/logic/editor/: colors.cpp  colors.hpp  editorHandler.cpp  editorHandler.hpp  editorHighlighter.cpp  editorHighlighter.hpp  editorHighlighterPrivate.cpp  editorHighlighterPrivate.hpp  editorTextManipulation.cpp  editorTextManipulation.hpp  posCacheUtils.cpp  posCacheUtils.hpp  syntaxvisitor.cpp  syntaxvisitor.hpp  toolbarUtils.cpp  toolbarUtils.hpp
src/logic/editorHandler/: OLDvimHandler.cpp  OLDvimHandler.h  editorHandler.cpp  editorHandler.h  vimHandler.cpp  vimHandler.h  vimMovement.cpp  vimMovement.h  vimMovementOperator.cpp  vimMovementOperator.h
src/logic/editorHandler/vimActions/: abstractVimAction.h  cutAction.h  gAction.h  insertAction.h  visualAction.h
src/logic/emoji/: emojiModel.cpp
src/logic/extendedSyntax/: extendedSyntaxHelper.cpp  extendedSyntaxHelper.hpp  extendedSyntaxMaker.cpp  extendedSyntaxMaker.hpp  md4qtHelperFunc.cpp  md4qtHelperFunc.hpp  subScriptExtension.cpp  subScriptExtension.hpp  textHighlightExtension.cpp  textHighlightExtension.hpp
src/logic/md4qt/: algo.hpp  doc.hpp  html.hpp  parser.hpp  poscache.hpp  traits.hpp  utils.hpp  visitor.hpp
src/logic/noteMapper/: linkedNotesModel.cpp  linkedNotesModel.h  noteMapper.cpp  noteMapper.h  noteMapperUtils.cpp  noteMapperUtils.h
src/logic/painting/: imageSaver.cpp  imageSaver.h  pointMaker.cpp  pointMaker.h  pressureequation.cpp  pressureequation.h  sketchmodel.cpp  sketchmodel.h  sketchserializer.cpp  sketchserializer.h  sketchview.cpp  sketchview.h  stroke.cpp  stroke.h  strokeitem.cpp  strokeitem.h  strokelistitem.cpp  strokelistitem.h  strokepainter.cpp  strokepainter.h
src/logic/parser/: blockLexer.cpp  blockLexer.h  inlineLexer.cpp  inlineLexer.h  md4qtDataCleaner.cpp  md4qtDataCleaner.hpp  md4qtDataGetter.cpp  md4qtDataGetter.hpp  md4qtDataManip.cpp  md4qtDataManip.hpp  parser.cpp  parser.h  plugins_helper.h  renderer.cpp  renderer.h
src/logic/parser/extendedSyntax/: extendedSyntaxMaker.cpp  extendedSyntaxMaker.hpp  md4qtHelperFunc.hpp
src/logic/parser/md4qt/: algo.h  algo.hpp  doc.h  doc.hpp  entities_map.h  entities_map.hpp  html.h  html.hpp  parser.h  parser.hpp  plugins.h  poscache.h  poscache.hpp  traits.h  traits.hpp  utils.h  visitor.h  (+1 more)
src/logic/plugins/: cliHelper.cpp  pluginHelper.cpp  pluginHelper.h
src/logic/preview/: styleHandler.cpp  styleHandler.hpp
src/logic/printing/: printingHelper.cpp  printingHelper.h  printtingHelper.cpp  printtingHelper.h
src/logic/syntaxHighlight/: highlightHelper.cpp  highlightHelper.h
src/logic/treeView/: treeModel.cpp  treeModel.h
src/logic/treeview/: fileSystemHelper.cpp  fileSystemHelper.h  noteTreeModel.cpp  noteTreeModel.h  oldModelConverter.cpp  oldModelConverter.h  treeItem.cpp  treeItem.h  treeModel.cpp  treeModel.h
src/logic/wysiwyg/: editorHighlighter.cpp  editorHighlighter.h  markdownHighlighter.cpp  markdownHighlighter.h  qownlanguagedata.cpp  qownlanguagedata.h
src/settings/: CMakeLists.txt  ConfigView.qml  DisplayPreview.qml  EditorHighlightPreview.qml  GeneralPage.qml  PluginsPage.qml
src/settings/components/: ClickableArrow.qml  ClickableIcon.qml
(+112 files in other folders)
